# peppermint

backend/: Cargo.toml
backend/src/: lib.rs  main.rs
backend/src/db/: mod.rs
backend/src/db/model/: mod.rs  user.rs
backend/src/db/model/utils/: validate.rs
backend/src/routes/: auth.rs  mod.rs
backend/src/utils/: jwt.rs
frontend/: .env.example  .gitignore  components.json  index.html  package.json  tailwind.config.js  tsconfig.json  validate.js
frontend/.husky/: pre-commit
frontend/src/: App.svelte  main.ts  middleware.ts
frontend/src/app/: layout.tsx  middleware.ts  page.tsx
frontend/src/app/(user)/dashboard/: page.tsx
frontend/src/app/(users)/connect/: layout.tsx
frontend/src/app/(users)/dashboard/: layout.tsx
frontend/src/app/nft/: layout.tsx
frontend/src/components/: Footer.svelte  NFTListingCard.svelte  Navbar.tsx
frontend/src/components/app/: Navbar.tsx
frontend/src/components/custom/: Navbar.tsx
frontend/src/components/ui/: button.tsx  input.tsx
frontend/src/db/: index.ts
frontend/src/db/models/: user.model.ts
frontend/src/hooks/: usePagination.tsx  useToggle.tsx
frontend/src/layouts/: WebsiteLayout.svelte
frontend/src/lib/: format.ts
frontend/src/pages/: Account.svelte  AccountPage.svelte  Home.svelte  HomePage.svelte  ListingPage.svelte  Shop.svelte  index.ts
frontend/src/store/: cart.store.ts
frontend/src/stores/users/: store.ts
frontend/src/utils/: formatter.ts
frontend/src/web3/: WalletAdapterProvider.tsx  WalletConnectionProvider.tsx  WalletContextProvider.tsx
frontend/src/zod/: user.z.ts
(+5 files in other folders)
